--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.CIS183_FinalProject_WorkoutTracker"
         tools:targetApi="31">
         <activity
+            android:name=".ConfirmNewSession"
+            android:exported="false" />
+        <activity
+            android:name=".NewSession"
+            android:exported="false" />
+        <activity
+            android:name=".MyProgress"
+            android:exported="false" />
+        <activity
             android:name=".PastSessions"
             android:exported="false" />
         <activity
