--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.CIS183_FinalProject_WorkoutTracker"
         tools:targetApi="31">
         <activity
+            android:name=".DeleteLift"
+            android:exported="false" />
+        <activity
             android:name=".ConfirmNewSession"
             android:exported="false" />
         <activity
