--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <application
         android:allowBackup="true"
@@ -11,7 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CIS183_FinalProject_WorkoutTracker"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".ViewSession"
+            android:exported="false" />
         <activity
             android:name=".DeleteLift"
             android:exported="false" />
@@ -22,7 +25,7 @@
             android:name=".NewSession"
             android:exported="false" />
         <activity
-            android:name=".MyProgress"
+            android:name=".AllSessions"
             android:exported="false" />
         <activity
             android:name=".PastSessions"
@@ -32,7 +35,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
