--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.CIS183_FinalProject_WorkoutTracker"
         tools:targetApi="31">
         <activity
+            android:name=".CompareToOtherUsers"
+            android:exported="false" />
+        <activity
+            android:name=".ProgressGraph"
+            android:exported="false" />
+        <activity
+            android:name=".CompareLifts"
+            android:exported="false" />
+        <activity
             android:name=".CompareSessions"
             android:exported="false" />
         <activity
